added alterntive search results layout

--- a/index.html
+++ b/index.html
@@ -176,8 +176,7 @@
         <div class="govuk-grid-column-full">
           <ul class="govuk-list">
             <li class="fs-search-results-list__item">
-              <h3 class="govuk-heading-m govuk-!-margin-bottom-1"><a class="govuk-link"
-                  href="#">Fenn's shopping centre
+              <h3 class="govuk-heading-m govuk-!-margin-bottom-1"><a class="govuk-link" href="#">Fenn's shopping centre
                   footfall project
                   outcomes 2021</a></h3>
               <p class="govuk-body-s">Last updated: 8 August 2022 | Levelling Up Fund | 3 MB</p>
@@ -198,6 +197,79 @@
               <button class="govuk-button govuk-button--secondary" data-module="govuk-button">Download</button>
             </li>
           </ul>
+
+          <div class="govuk-grid-row">
+            <ul class="govuk-list">
+              <li class="govuk-grid-column-one-quarter">
+                <div class="fs-card-block">
+                  <img src="/assets/images/govuk-opengraph-image.png" alt="">
+                  <div class="fs-card-block__content">
+                    <p class="govuk-body-s"><a class="govuk-link govuk-!-font-weight-bold" href="#">Fenn's
+                        shopping centre
+                        footfall project
+                        outcomes 2021</a></p>
+                    <ul class="govuk-list">
+                      <li class="govuk-body-s">
+                        <strong>Last updated:</strong> 8 Aug 2022
+                      </li>
+                      <li class="govuk-body-s">
+                        <strong>Fund:</strong> Levelling Up
+                      </li>
+                      <li class="govuk-body-s">
+                        <strong>Frequency:</strong> Annual
+                      </li>
+                    </ul>
+                    <p class="govuk-body-s">Fenn's shopping centre in Lincoln city centre has experienced a decline in
+                      footfall in recent years...</p>
+                    <div>
+                      <strong class="govuk-tag govuk-tag--grey">
+                        CSV
+                      </strong>
+                      <strong class="govuk-tag govuk-tag--grey">
+                        JSON
+                      </strong>
+                      <strong class="govuk-tag govuk-tag--grey">
+                        XML
+                      </strong>
+                    </div>
+                  </div>
+                </div>
+              </li>
+              <li class="govuk-grid-column-one-quarter">
+                <div class="fs-card-block">
+                  <img src="/assets/images/govuk-opengraph-image.png" alt="">
+                  <div class="fs-card-block__content">
+                    <p class="govuk-body-s"><a class="govuk-link govuk-!-font-weight-bold" href="#">Hedge Hill project
+                        outcomes 2021</a></p>
+                    <ul class="govuk-list">
+                      <li class="govuk-body-s">
+                        <strong>Last updated:</strong> 20 Jul 2022
+                      </li>
+                      <li class="govuk-body-s">
+                        <strong>Fund:</strong> Levelling Up
+                      </li>
+                      <li class="govuk-body-s">
+                        <strong>Frequency:</strong> Annual
+                      </li>
+                    </ul>
+                    <p class="govuk-body-s">A lack of integrated investment together with out of town retail and
+                      residential growth has led to...</p>
+                    <div>
+                      <strong class="govuk-tag govuk-tag--grey">
+                        CSV
+                      </strong>
+                      <strong class="govuk-tag govuk-tag--grey">
+                        JSON
+                      </strong>
+                      <strong class="govuk-tag govuk-tag--grey">
+                        XML
+                      </strong>
+                    </div>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
 
         </div>
 
