label text update

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
             <div class="govuk-form-group">
               <label class="govuk-label" for="data-format">
-                Date format
+                Data format
               </label>
               <select class="govuk-select" id="data-format" name="data-format">
                 <option value="csv" selected>CSV</option>
