added search result detail page

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
           <p class="govuk-body-l">Use this tool to find monitoring and evaluation data for funded projects.</p>
 
-          <form action="#" method="post" novalidate>
+          <form action="#results" method="post" novalidate>
             <div class="govuk-form-group">
               <label class="govuk-label" for="submitted-by">
                 Data submitted by
@@ -169,14 +169,14 @@
           <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
         </div>
 
-        <div class="govuk-grid-column-full">
+        <div id="results" class="govuk-grid-column-full">
           <h2 class="govuk-heading-l">Search results</h2>
         </div>
 
         <div class="govuk-grid-column-full">
           <ul class="govuk-list">
             <li class="fs-search-results-list__item">
-              <h3 class="govuk-heading-m govuk-!-margin-bottom-1"><a class="govuk-link" href="#">Fenn's shopping centre
+              <h3 class="govuk-heading-m govuk-!-margin-bottom-1"><a class="govuk-link" href="/search/result.html">Fenn's shopping centre
                   footfall project
                   outcomes 2021</a></h3>
               <p class="govuk-body-s">Last updated: 8 August 2022 | Levelling Up Fund | 3 MB</p>
@@ -204,7 +204,7 @@
                 <div class="fs-card-block">
                   <img src="/assets/images/govuk-opengraph-image.png" alt="">
                   <div class="fs-card-block__content">
-                    <p class="govuk-body-s"><a class="govuk-link govuk-!-font-weight-bold" href="#">Fenn's
+                    <p class="govuk-body-s"><a class="govuk-link govuk-!-font-weight-bold" href="/search/result.html">Fenn's
                         shopping centre
                         footfall project
                         outcomes 2021</a></p>
