--- a/search/result-summary.html
+++ b/search/result-summary.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>GOV.UK - Funding Service - Fenn's shopping centre footfall project outcomes 2021</title>
+  <title>GOV.UK - Funding Service - Fenn's shopping centre footfall project outcomes 2021 - Project summary</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta name="theme-color" content="#0b0c0c">
 
@@ -56,34 +56,27 @@
     <div class="govuk-breadcrumbs">
       <ol class="govuk-breadcrumbs__list">
         <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/index.html">Find project data</a>
-        </li>
-        <li class="govuk-breadcrumbs__list-item">
           <a class="govuk-breadcrumbs__link" href="/index.html">Search results</a>
         </li>
         <li class="govuk-breadcrumbs__list-item">
           <a class="govuk-breadcrumbs__link" href="/search/result.html">Fenn's shopping centre footfall project outcomes
             2021</a>
         </li>
+        <li class="govuk-breadcrumbs__list-item">
+          <a class="govuk-breadcrumbs__link" href="/search/result.html">Project summary</a>
+        </li>
       </ol>
     </div>
 
-    <a href="/index.html" class="govuk-back-link">Back</a>
+    <a href="/search/result.html" class="govuk-back-link">Back</a>
 
     <main class="govuk-main-wrapper" id="main-content" role="main">
 
-      <h1 class="govuk-heading-xl">Fenn's shopping centre footfall project outcomes 2021</h1>
+      <h1 class="govuk-heading-xl">Project summary: Fenn's shopping centre footfall</h1>
 
       <div class="govuk-grid-row">
         
         <div class="govuk-grid-column-two-thirds">
-
-          <p class="govuk-body"><strong>Project summary: </strong>Fenn's shopping centre in Lincoln city centre has
-            experienced a decline in footfall in recent years. In 2021, local businesses worked together to increase
-            footfall in the shopping centre and surrounding area to support local retailers.</p>
-
-          <p class="govuk-body"><a class="govuk-link" href="/search/result-summary.html">Read full project summary</a>
-          </p>
 
           <dl class="govuk-summary-list">
             <div class="govuk-summary-list__row">
@@ -120,48 +113,17 @@
             </div>
           </dl>
 
-          <dl class="govuk-summary-list">
-            <div class="govuk-summary-list__row">
-              <dt class="govuk-summary-list__key">
-                How data was collected:
-              </dt>
-              <dd class="govuk-summary-list__value">
-                External organisations hired sensors to track mobile steps in shopping centre
-              </dd>
-            </div>
-            <div class="govuk-summary-list__row">
-              <dt class="govuk-summary-list__key">
-                Limitations to data collection:
-              </dt>
-              <dd class="govuk-summary-list__value">
-                Sensors broke for two months
-              </dd>
-            </div>
-          </dl>
+          <p class="govuk-body"><strong>Project aim: </strong>The project will use funding to regenerate the shopping
+            centre, support local retailers and improve community feel.</p>
 
           <dl class="govuk-summary-list">
-            <div class="govuk-summary-list__row">
-              <dt class="govuk-summary-list__key">
-                Frequency of reporting:
-              </dt>
-              <dd class="govuk-summary-list__value">
-                Annual
-              </dd>
-            </div>
-            <div class="govuk-summary-list__row">
-              <dt class="govuk-summary-list__key">
-                Data submitted by:
-              </dt>
-              <dd class="govuk-summary-list__value">
-                West Lindsey District Council
-              </dd>
-            </div>
             <div class="govuk-summary-list__row">
               <dt class="govuk-summary-list__key">
                 Project contact:
               </dt>
               <dd class="govuk-summary-list__value">
-                <a class="govuk-link" href="#">sara.long@lincolnshire.gov.uk</a>
+                <a class="govuk-link" href="#">sara.long@lincolnshire.gov.uk</a>, <a class="govuk-link"
+                  href="#">sally.law@lincolnshire.gov.uk</a>
               </dd>
             </div>
             <div class="govuk-summary-list__row">
@@ -172,7 +134,26 @@
                 Gainsborough, Lincolnshire
               </dd>
             </div>
+            <div class="govuk-summary-list__row">
+              <dt class="govuk-summary-list__key">
+                Project status:
+              </dt>
+              <dd class="govuk-summary-list__value">
+                <strong class="govuk-tag govuk-tag--yellow">
+                  Delayed
+                </strong>
+              </dd>
+            </div>
           </dl>
+
+          <ul class="govuk-list">
+            <li>
+              <a class="govuk-link" href="#">View risk register</a>
+            </li>
+            <li>
+              <a class="govuk-link" href="#">View PowerBI dashboard</a>
+            </li>
+          </ul>
 
           <form>
             <div class="govuk-form-group">
@@ -201,22 +182,13 @@
         </div>
 
         <div class="govuk-grid-column-full">
-          <h2 class="govuk-heading-m">Related project data</h2>
+          <h2 class="govuk-heading-m">Related project information</h2>
         </div>
 
         <div class="govuk-grid-column-full">
           <ul class="govuk-list">
             <li>
-              <a class="govuk-link" href="#">Fenn's shopping centre footfall 2000</a>
-            </li>
-            <li>
-              <a class="govuk-link" href="#">Fenn's shopping centre footfall 1999</a>
-            </li>
-            <li>
-              <a class="govuk-link" href="#">Fenn's shopping centre footfall 1998</a>
-            </li>
-            <li>
-              <a class="govuk-link" href="#">Fenn's shopping centre footfall 1997</a>
+              <a class="govuk-link" href="#">Fenn's shopping Centre project outcomes 2021</a>
             </li>
           </ul>
         </div>
