--- a/search/project-summary-one.html
+++ b/search/project-summary-one.html
@@ -18,6 +18,7 @@
 
   <!--[if !IE 8]><!-->
   <link href="/stylesheets/govuk-frontend-4.4.0.min.css" rel="stylesheet">
+  <link href="/stylesheets/fs-custom-styles.css" rel="stylesheet">
   <!--<![endif]-->
 
   <!--[if IE 8]>
@@ -59,16 +60,14 @@
           <a class="govuk-breadcrumbs__link" href="/index.html">Search results</a>
         </li>
         <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/search/result.html">Fenn's shopping centre footfall project outcomes
+          <a class="govuk-breadcrumbs__link" href="/search/project-one.html">Fenn's shopping centre footfall project outcomes
             2021</a>
         </li>
         <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/search/result.html">Project summary</a>
+          <a class="govuk-breadcrumbs__link" href="/search/project-one.html">Project summary</a>
         </li>
       </ol>
     </div>
-
-    <a href="/search/result.html" class="govuk-back-link">Back</a>
 
     <main class="govuk-main-wrapper" id="main-content" role="main">
 
@@ -78,7 +77,7 @@
         
         <div class="govuk-grid-column-two-thirds">
 
-          <dl class="govuk-summary-list">
+          <dl class="govuk-summary-list govuk-summary-list--no-border">
             <div class="govuk-summary-list__row">
               <dt class="govuk-summary-list__key">
                 Last updated:
@@ -116,7 +115,7 @@
           <p class="govuk-body"><strong>Project aim: </strong>The project will use funding to regenerate the shopping
             centre, support local retailers and improve community feel.</p>
 
-          <dl class="govuk-summary-list">
+          <dl class="govuk-summary-list govuk-summary-list--no-border">
             <div class="govuk-summary-list__row">
               <dt class="govuk-summary-list__key">
                 Project contact:
