--- a/search/project-two.html
+++ b/search/project-two.html
@@ -18,6 +18,7 @@
 
   <!--[if !IE 8]><!-->
   <link href="/stylesheets/govuk-frontend-4.4.0.min.css" rel="stylesheet">
+  <link href="/stylesheets/fs-custom-styles.css" rel="stylesheet">
   <!--<![endif]-->
 
   <!--[if IE 8]>
@@ -56,50 +57,33 @@
     <div class="govuk-breadcrumbs">
       <ol class="govuk-breadcrumbs__list">
         <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/index.html">Find project data</a>
+          <a class="govuk-breadcrumbs__link" href="/landing-two.html">Find project data</a>
         </li>
         <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/index.html">Search results</a>
+          <a class="govuk-breadcrumbs__link" href="/landing-two.html">Search results</a>
         </li>
         <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/search/result.html">Fenn's shopping centre footfall project outcomes
+          <a class="govuk-breadcrumbs__link" href="/search/project-two.html">Greater London footfall project outcomes
             2021</a>
         </li>
       </ol>
     </div>
 
-    <a href="/index.html" class="govuk-back-link">Back</a>
-
     <main class="govuk-main-wrapper" id="main-content" role="main">
 
-      <h1 class="govuk-heading-xl">Fenn's shopping centre footfall project outcomes 2021</h1>
+      <h1 class="govuk-heading-xl">Greater London footfall project outcomes 2021</h1>
 
       <div class="govuk-grid-row">
-        
+
         <div class="govuk-grid-column-two-thirds">
 
-          <p class="govuk-body"><strong>Project summary: </strong>Fenn's shopping centre in Lincoln city centre has
-            experienced a decline in footfall in recent years. In 2021, local businesses worked together to increase
-            footfall in the shopping centre and surrounding area to support local retailers.</p>
-
-          <p class="govuk-body"><a class="govuk-link" href="/search/result-summary.html">Read full project summary</a>
-          </p>
-
-          <dl class="govuk-summary-list">
+          <dl class="govuk-summary-list govuk-summary-list--no-border">
             <div class="govuk-summary-list__row">
               <dt class="govuk-summary-list__key">
-                Last updated:
+                Fund(s):
               </dt>
               <dd class="govuk-summary-list__value">
-                8 August 2021
-              </dd>
-            </div>
-            <div class="govuk-summary-list__row">
-              <dt class="govuk-summary-list__key">
-                Fund:
-              </dt>
-              <dd class="govuk-summary-list__value">
-                Levelling Up
+                Levelling Up, Towns Fund
               </dd>
             </div>
             <div class="govuk-summary-list__row">
@@ -112,69 +96,31 @@
             </div>
             <div class="govuk-summary-list__row">
               <dt class="govuk-summary-list__key">
-                Funding amount:
-              </dt>
-              <dd class="govuk-summary-list__value">
-                £30,000,000
-              </dd>
-            </div>
-          </dl>
-
-          <dl class="govuk-summary-list">
-            <div class="govuk-summary-list__row">
-              <dt class="govuk-summary-list__key">
-                How data was collected:
-              </dt>
-              <dd class="govuk-summary-list__value">
-                External organisations hired sensors to track mobile steps in shopping centre
-              </dd>
-            </div>
-            <div class="govuk-summary-list__row">
-              <dt class="govuk-summary-list__key">
-                Limitations to data collection:
-              </dt>
-              <dd class="govuk-summary-list__value">
-                Sensors broke for two months
-              </dd>
-            </div>
-          </dl>
-
-          <dl class="govuk-summary-list">
-            <div class="govuk-summary-list__row">
-              <dt class="govuk-summary-list__key">
                 Frequency of reporting:
               </dt>
               <dd class="govuk-summary-list__value">
                 Annual
               </dd>
             </div>
-            <div class="govuk-summary-list__row">
-              <dt class="govuk-summary-list__key">
-                Data submitted by:
-              </dt>
-              <dd class="govuk-summary-list__value">
-                West Lindsey District Council
-              </dd>
-            </div>
-            <div class="govuk-summary-list__row">
-              <dt class="govuk-summary-list__key">
-                Project contact:
-              </dt>
-              <dd class="govuk-summary-list__value">
-                <a class="govuk-link" href="#">sara.long@lincolnshire.gov.uk</a>
-              </dd>
-            </div>
-            <div class="govuk-summary-list__row">
-              <dt class="govuk-summary-list__key">
-                Location:
-              </dt>
-              <dd class="govuk-summary-list__value">
-                Gainsborough, Lincolnshire
-              </dd>
-            </div>
           </dl>
 
-          <form>
+          <h3 class="govuk-heading-m">Sources</h3>
+          <ul class="govuk-list--bullet">
+            <li>
+              <a class="govuk-link" href="#">Rainham footfall 2021</a>
+            </li>
+            <li>
+              <a class="govuk-link" href="/search/project-summary-two.html">Fenn's shopping centre footfall 2021</a>
+            </li>
+            <li>
+              <a class="govuk-link" href="#">Bakely footfall 2021</a>
+            </li>
+            <li>
+              <a class="govuk-link" href="#">Bonny centre footfall 2021</a>
+            </li>
+          </ul>
+
+          <form class="govuk-!-margin-top-6">
             <div class="govuk-form-group">
               <label class="govuk-label" for="file-format">
                 File format
@@ -186,13 +132,16 @@
 
             <div class="govuk-button-group govuk-!-margin-bottom-0">
               <button class="govuk-button" data-module="govuk-button">
-                Download
+                Download   
               </button>
               <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
                 Preview
               </button>
             </div>
           </form>
+
+          <h3 class="govuk-heading-m govuk-!-margin-top-6">Preview</h3>
+          <img class="govuk-!-width-two-thirds fs-img-border" src="/assets/images/graph-placeholder.png" alt="">
 
         </div>
 
@@ -207,16 +156,10 @@
         <div class="govuk-grid-column-full">
           <ul class="govuk-list">
             <li>
-              <a class="govuk-link" href="#">Fenn's shopping centre footfall 2000</a>
+              <a class="govuk-link" href="#">West Sussex project footfall outcomes 2021</a>
             </li>
             <li>
-              <a class="govuk-link" href="#">Fenn's shopping centre footfall 1999</a>
-            </li>
-            <li>
-              <a class="govuk-link" href="#">Fenn's shopping centre footfall 1998</a>
-            </li>
-            <li>
-              <a class="govuk-link" href="#">Fenn's shopping centre footfall 1997</a>
+              <a class="govuk-link" href="#">Hertfordshire project footfall outcomes 2021</a>
             </li>
           </ul>
         </div>
