--- a/v1/index.html
+++ b/v1/index.html
@@ -61,9 +61,9 @@
       <div class="govuk-grid-row">
 
         <div class="govuk-grid-column-two-thirds-from-desktop">
-          <h2 class="govuk-heading-l"><a class="govuk-link govuk-!-font-weight-bold" href="landing-one.html">Landing
+          <h2 class="govuk-heading-l"><a class="govuk-link govuk-!-font-weight-bold" href="/v1/landing-one.html">Landing
               Page - Option 1</a></h2>
-          <h2 class="govuk-heading-l"><a class="govuk-link govuk-!-font-weight-bold" href="landing-two.html">Landing
+          <h2 class="govuk-heading-l"><a class="govuk-link govuk-!-font-weight-bold" href="/v1/landing-two.html">Landing
               Page - Option 2</a></h2>
         </div>
 
