--- a/v1/search/project-summary-two.html
+++ b/v1/search/project-summary-two.html
@@ -57,14 +57,14 @@
     <div class="govuk-breadcrumbs">
       <ol class="govuk-breadcrumbs__list">
         <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/index.html">Search results</a>
+          <a class="govuk-breadcrumbs__link" href="/v1/index.html">Search results</a>
         </li>
         <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/search/project-two.html">Fenn's shopping centre footfall project outcomes
+          <a class="govuk-breadcrumbs__link" href="/v1/search/project-two.html">Fenn's shopping centre footfall project outcomes
             2021</a>
         </li>
         <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/search/project-two.html">Project summary</a>
+          <a class="govuk-breadcrumbs__link" href="/v1/search/project-two.html">Project summary</a>
         </li>
       </ol>
     </div>
