--- a/v1/landing-one.html
+++ b/v1/landing-one.html
@@ -57,10 +57,10 @@
     <div class="govuk-breadcrumbs">
       <ol class="govuk-breadcrumbs__list">
         <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/index.html">Department for Levelling Up, Housing & Communities</a>
+          <a class="govuk-breadcrumbs__link" href="/v1/index.html">Department for Levelling Up, Housing & Communities</a>
         </li>
         <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/index.html">Funded projects</a>
+          <a class="govuk-breadcrumbs__link" href="/v1/index.html">Funded projects</a>
         </li>
         <li class="govuk-breadcrumbs__list-item">
           <a class="govuk-breadcrumbs__link" href="#">Find project data</a>
@@ -176,7 +176,7 @@
         <div class="govuk-grid-column-full">
           <ul class="govuk-list govuk-!-margin-bottom-0">
             <li class="fs-search-results-list__item">
-              <h3 class="govuk-heading-m govuk-!-margin-bottom-1"><a class="govuk-link" href="/search/project-one.html">Fenn's shopping centre
+              <h3 class="govuk-heading-m govuk-!-margin-bottom-1"><a class="govuk-link" href="/v1/search/project-one.html">Fenn's shopping centre
                   footfall project
                   outcomes 2021</a></h3>
               <p class="govuk-body-s">Last updated: 8 August 2022 | Levelling Up Fund | 3 MB</p>
