--- a/v1/landing-two.html
+++ b/v1/landing-two.html
@@ -57,10 +57,10 @@
     <div class="govuk-breadcrumbs">
       <ol class="govuk-breadcrumbs__list">
         <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/index.html">Department for Levelling Up, Housing & Communities</a>
+          <a class="govuk-breadcrumbs__link" href="/v1/index.html">Department for Levelling Up, Housing & Communities</a>
         </li>
         <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/index.html">Funded projects</a>
+          <a class="govuk-breadcrumbs__link" href="/v1/index.html">Funded projects</a>
         </li>
         <li class="govuk-breadcrumbs__list-item">
           <a class="govuk-breadcrumbs__link" href="#">Find project data</a>
@@ -180,7 +180,7 @@
                 <img class="govuk-!-width-full" src="/assets/images/govuk-opengraph-image.png" alt="">
                 <div class="fs-card-block__content">
                   <p class="govuk-body-s"><a class="govuk-link govuk-!-font-weight-bold"
-                      href="/search/project-two.html">Fenn's
+                      href="/v1/search/project-two.html">Fenn's
                       shopping centre
                       footfall project
                       outcomes 2021</a></p>
