--- a/v1/search/project-two.html
+++ b/v1/search/project-two.html
@@ -57,13 +57,13 @@
     <div class="govuk-breadcrumbs">
       <ol class="govuk-breadcrumbs__list">
         <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/landing-two.html">Find project data</a>
+          <a class="govuk-breadcrumbs__link" href="/v1/landing-two.html">Find project data</a>
         </li>
         <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/landing-two.html">Search results</a>
+          <a class="govuk-breadcrumbs__link" href="/v1/landing-two.html">Search results</a>
         </li>
         <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/search/project-two.html">Greater London footfall project outcomes
+          <a class="govuk-breadcrumbs__link" href="/v1/search/project-two.html">Greater London footfall project outcomes
             2021</a>
         </li>
       </ol>
@@ -110,7 +110,7 @@
               <a class="govuk-link" href="#">Rainham footfall 2021</a>
             </li>
             <li>
-              <a class="govuk-link" href="/search/project-summary-two.html">Fenn's shopping centre footfall 2021</a>
+              <a class="govuk-link" href="/v1/search/project-summary-two.html">Fenn's shopping centre footfall 2021</a>
             </li>
             <li>
               <a class="govuk-link" href="#">Bakely footfall 2021</a>
