--- a/v2/index.html
+++ b/v2/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>GOV.UK - Funding Service - Fenn's shopping centre footfall project outcomes 2021</title>
+  <title>GOV.UK - Funding Service - Find project data</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta name="theme-color" content="#0b0c0c">
 
@@ -52,106 +52,53 @@
     </div>
   </header>
 
-  <div class="govuk-width-container">
-    <div class="govuk-breadcrumbs">
-      <ol class="govuk-breadcrumbs__list">
-        <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/v1/landing-two.html">Find project data</a>
-        </li>
-        <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/v1/landing-two.html">Search results</a>
-        </li>
-        <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/v1/search/project-two.html">Greater London footfall project outcomes
-            2021</a>
-        </li>
-      </ol>
+  <div class="govuk-main-wrapper pfs-section-bg-alt govuk-!-padding-top-0 govuk-!-padding-bottom-0">
+    <div class="govuk-width-container">
+      <div class="govuk-breadcrumbs govuk-!-margin-top-0 govuk-!-margin-bottom-0 govuk-!-padding-top-3">
+        <ol class="govuk-breadcrumbs__list">
+          <li class="govuk-breadcrumbs__list-item">
+            <a class="govuk-breadcrumbs__link" href="/v2/index.html">Department for Levelling Up, Housing &
+              Communities</a>
+          </li>
+          <li class="govuk-breadcrumbs__list-item">
+            <a class="govuk-breadcrumbs__link" href="/v2/index.html">Funded projects</a>
+          </li>
+          <li class="govuk-breadcrumbs__list-item">
+            <a class="govuk-breadcrumbs__link" href="#">Find project information</a>
+          </li>
+        </ol>
+      </div>
     </div>
-    <main class="govuk-main-wrapper" id="main-content" role="main">
-      <h1 class="govuk-heading-xl">Greater London footfall project outcomes 2021</h1>
-      <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
-          <dl class="govuk-summary-list govuk-summary-list--no-border">
-            <div class="govuk-summary-list__row">
-              <dt class="govuk-summary-list__key">
-                Fund(s):
-              </dt>
-              <dd class="govuk-summary-list__value">
-                Levelling Up, Towns Fund
-              </dd>
+  </div>
+  <main id="main-content" role="main">
+    <section class="govuk-main-wrapper pfs-section-bg-alt">
+      <div class="govuk-width-container">
+        <h1 class="govuk-heading-xl">Find funded project information</h1>
+        <p class="govuk-body-l govuk-!-margin-bottom-0">Use this tool to find monitoring and evaluation data and
+          background information on funded projects.</p>
+      </div>
+    </section>
+    <section class="govuk-main-wrapper">
+      <div class="govuk-width-container">
+        <div class="govuk-grid-row">
+          <div class="govuk-grid-column-full">
+            <div class="govuk-grid-row">
+              <div class="govuk-grid-column-one-third-from-desktop">
+                <h2 class="govuk-heading-l govuk-!-font-weight-bold"><a href="/v2/download-data.html"
+                    class="govuk-link govuk-!-font-weight-bold">Search for monitoring and evaluation data</a></h2>
+                <p class="govuk-body">Search and download project data submitted by funded organisations.</p>
+              </div>
+              <div class="govuk-grid-column-one-third-from-desktop">
+                <h2 class="govuk-heading-l govuk-!-font-weight-bold"><a href="/styles/"
+                    class="govuk-link govuk-!-font-weight-bold">Search funding directory</a></h2>
+                <p class="govuk-body">Find background information on funded projects and organisations.</p>
+              </div>
             </div>
-            <div class="govuk-summary-list__row">
-              <dt class="govuk-summary-list__key">
-                Project timeframe:
-              </dt>
-              <dd class="govuk-summary-list__value">
-                2 August 2020 to 8 August 2021
-              </dd>
-            </div>
-            <div class="govuk-summary-list__row">
-              <dt class="govuk-summary-list__key">
-                Frequency of reporting:
-              </dt>
-              <dd class="govuk-summary-list__value">
-                Annual
-              </dd>
-            </div>
-          </dl>
-          <h3 class="govuk-heading-m">Sources</h3>
-          <ul class="govuk-list--bullet">
-            <li>
-              <a class="govuk-link" href="#">Rainham footfall 2021</a>
-            </li>
-            <li>
-              <a class="govuk-link" href="/v1/search/project-summary-two.html">Fenn's shopping centre footfall 2021</a>
-            </li>
-            <li>
-              <a class="govuk-link" href="#">Bakely footfall 2021</a>
-            </li>
-            <li>
-              <a class="govuk-link" href="#">Bonny centre footfall 2021</a>
-            </li>
-          </ul>
-          <form class="govuk-!-margin-top-6">
-            <div class="govuk-form-group">
-              <label class="govuk-label" for="file-format">
-                File format
-              </label>
-              <select class="govuk-select" id="file-format" name="file-format">
-                <option value="csv" selected>CSV</option>
-              </select>
-            </div>
-            <div class="govuk-button-group govuk-!-margin-bottom-0">
-              <button class="govuk-button" data-module="govuk-button">
-                Download
-              </button>
-              <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
-                Preview
-              </button>
-            </div>
-          </form>
-          <h3 class="govuk-heading-m govuk-!-margin-top-6">Preview</h3>
-          <img class="govuk-!-width-two-thirds pfs-img-border" src="/assets/images/graph-placeholder.png" alt="">
-        </div>
-        <div class="govuk-grid-column-full">
-          <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
-        </div>
-        <div class="govuk-grid-column-full">
-          <h2 class="govuk-heading-m">Related project data</h2>
-        </div>
-        <div class="govuk-grid-column-full">
-          <ul class="govuk-list">
-            <li>
-              <a class="govuk-link" href="#">West Sussex project footfall outcomes 2021</a>
-            </li>
-            <li>
-              <a class="govuk-link" href="#">Hertfordshire project footfall outcomes 2021</a>
-            </li>
-          </ul>
+          </div>
         </div>
       </div>
-    </main>
-  </div>
+    </section>
+  </main>
 
   <footer class="govuk-footer" role="contentinfo">
     <div class="govuk-width-container">
