--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>GOV.UK - Funding Service - Fenn's shopping centre footfall project outcomes 2021</title>
+  <title>GOV.UK - Funding Service - Find project data</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta name="theme-color" content="#0b0c0c">
 
@@ -35,7 +35,7 @@
 
   <header class="govuk-header" role="banner" data-module="govuk-header">
     <div class="govuk-header__container govuk-width-container">
-      <div class="govuk-header__logo">
+      <div class="govuk-header__logo govuk-header__logo pfs-header__logo">
         <a href="/" class="govuk-header__link govuk-header__link--homepage">
           <span class="govuk-header__logotype">
             <!--[if gt IE 8]><!-->
@@ -53,101 +53,12 @@
   </header>
 
   <div class="govuk-width-container">
-    <div class="govuk-breadcrumbs">
-      <ol class="govuk-breadcrumbs__list">
-        <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/v1/landing-two.html">Find project data</a>
-        </li>
-        <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/v1/landing-two.html">Search results</a>
-        </li>
-        <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/v1/search/project-two.html">Greater London footfall project outcomes
-            2021</a>
-        </li>
-      </ol>
-    </div>
     <main class="govuk-main-wrapper" id="main-content" role="main">
-      <h1 class="govuk-heading-xl">Greater London footfall project outcomes 2021</h1>
+      <h1 class="govuk-heading-xl">Alpha - M&E Design Exploration</h1>
       <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
-          <dl class="govuk-summary-list govuk-summary-list--no-border">
-            <div class="govuk-summary-list__row">
-              <dt class="govuk-summary-list__key">
-                Fund(s):
-              </dt>
-              <dd class="govuk-summary-list__value">
-                Levelling Up, Towns Fund
-              </dd>
-            </div>
-            <div class="govuk-summary-list__row">
-              <dt class="govuk-summary-list__key">
-                Project timeframe:
-              </dt>
-              <dd class="govuk-summary-list__value">
-                2 August 2020 to 8 August 2021
-              </dd>
-            </div>
-            <div class="govuk-summary-list__row">
-              <dt class="govuk-summary-list__key">
-                Frequency of reporting:
-              </dt>
-              <dd class="govuk-summary-list__value">
-                Annual
-              </dd>
-            </div>
-          </dl>
-          <h3 class="govuk-heading-m">Sources</h3>
-          <ul class="govuk-list--bullet">
-            <li>
-              <a class="govuk-link" href="#">Rainham footfall 2021</a>
-            </li>
-            <li>
-              <a class="govuk-link" href="/v1/search/project-summary-two.html">Fenn's shopping centre footfall 2021</a>
-            </li>
-            <li>
-              <a class="govuk-link" href="#">Bakely footfall 2021</a>
-            </li>
-            <li>
-              <a class="govuk-link" href="#">Bonny centre footfall 2021</a>
-            </li>
-          </ul>
-          <form class="govuk-!-margin-top-6">
-            <div class="govuk-form-group">
-              <label class="govuk-label" for="file-format">
-                File format
-              </label>
-              <select class="govuk-select" id="file-format" name="file-format">
-                <option value="csv" selected>CSV</option>
-              </select>
-            </div>
-            <div class="govuk-button-group govuk-!-margin-bottom-0">
-              <button class="govuk-button" data-module="govuk-button">
-                Download
-              </button>
-              <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
-                Preview
-              </button>
-            </div>
-          </form>
-          <h3 class="govuk-heading-m govuk-!-margin-top-6">Preview</h3>
-          <img class="govuk-!-width-two-thirds pfs-img-border" src="/assets/images/graph-placeholder.png" alt="">
-        </div>
-        <div class="govuk-grid-column-full">
-          <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
-        </div>
-        <div class="govuk-grid-column-full">
-          <h2 class="govuk-heading-m">Related project data</h2>
-        </div>
-        <div class="govuk-grid-column-full">
-          <ul class="govuk-list">
-            <li>
-              <a class="govuk-link" href="#">West Sussex project footfall outcomes 2021</a>
-            </li>
-            <li>
-              <a class="govuk-link" href="#">Hertfordshire project footfall outcomes 2021</a>
-            </li>
-          </ul>
+        <div class="govuk-grid-column-two-thirds-from-desktop">
+          <h2 class="govuk-heading-l"><a class="govuk-link govuk-!-font-weight-bold" href="/v1">Version 1</a></h2>
+          <h2 class="govuk-heading-l"><a class="govuk-link govuk-!-font-weight-bold" href="/v2">Version 2</a></h2>
         </div>
       </div>
     </main>
