--- a/v1/index.html
+++ b/v1/index.html
@@ -18,7 +18,7 @@
 
   <!--[if !IE 8]><!-->
   <link href="/stylesheets/govuk-frontend-4.4.0.min.css" rel="stylesheet">
-  <link href="/stylesheets/fs-custom-styles.css" rel="stylesheet">
+  <link href="/stylesheets/pfs-custom-styles.css" rel="stylesheet">
   <!--<![endif]-->
 
   <!--[if IE 8]>
@@ -53,25 +53,17 @@
   </header>
 
   <div class="govuk-width-container">
-
     <main class="govuk-main-wrapper" id="main-content" role="main">
-
       <h1 class="govuk-heading-xl">Alpha - M&E Design Exploration V1</h1>
-
       <div class="govuk-grid-row">
-
         <div class="govuk-grid-column-two-thirds-from-desktop">
-          <h2 class="govuk-heading-l"><a class="govuk-link govuk-!-font-weight-bold" href="/v1/landing-one.html">Landing
-              Page - Option 1</a></h2>
-          <h2 class="govuk-heading-l"><a class="govuk-link govuk-!-font-weight-bold" href="/v1/landing-two.html">Landing
-              Page - Option 2</a></h2>
+          <h2 class="govuk-heading-l"><a class="govuk-link govuk-!-font-weight-bold" href="/v1/landing-one.html">Journey
+              1</a></h2>
+          <h2 class="govuk-heading-l"><a class="govuk-link govuk-!-font-weight-bold" href="/v1/landing-two.html">Journey
+              2</a></h2>
         </div>
-
       </div>
-  </div>
-
-  </main>
-
+    </main>
   </div>
 
   <footer class="govuk-footer" role="contentinfo">
