--- a/v1/search/project-one.html
+++ b/v1/search/project-one.html
@@ -18,7 +18,7 @@
 
   <!--[if !IE 8]><!-->
   <link href="/stylesheets/govuk-frontend-4.4.0.min.css" rel="stylesheet">
-  <link href="/stylesheets/fs-custom-styles.css" rel="stylesheet">
+  <link href="/stylesheets/pfs-custom-styles.css" rel="stylesheet">
   <!--<![endif]-->
 
   <!--[if IE 8]>
@@ -53,7 +53,6 @@
   </header>
 
   <div class="govuk-width-container">
-
     <div class="govuk-breadcrumbs">
       <ol class="govuk-breadcrumbs__list">
         <li class="govuk-breadcrumbs__list-item">
@@ -63,27 +62,22 @@
           <a class="govuk-breadcrumbs__link" href="/v1/landing-one.html">Search results</a>
         </li>
         <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/v1/search/project-one.html">Fenn's shopping centre footfall project outcomes
+          <a class="govuk-breadcrumbs__link" href="/v1/search/project-one.html">Fenn's shopping centre footfall project
+            outcomes
             2021</a>
         </li>
       </ol>
     </div>
-
     <main class="govuk-main-wrapper" id="main-content" role="main">
-
       <h1 class="govuk-heading-xl">Fenn's shopping centre footfall project outcomes 2021</h1>
-
       <div class="govuk-grid-row">
-        
         <div class="govuk-grid-column-two-thirds">
-
           <p class="govuk-body"><strong>Project summary: </strong>Fenn's shopping centre in Lincoln city centre has
             experienced a decline in footfall in recent years. In 2021, local businesses worked together to increase
             footfall in the shopping centre and surrounding area to support local retailers.</p>
-
-          <p class="govuk-body"><a class="govuk-link" href="/v1/search/project-summary-one.html">Read full project summary</a>
+          <p class="govuk-body"><a class="govuk-link" href="/v1/search/project-summary-one.html">Read full project
+              summary</a>
           </p>
-
           <dl class="govuk-summary-list govuk-summary-list--no-border">
             <div class="govuk-summary-list__row">
               <dt class="govuk-summary-list__key">
@@ -118,7 +112,6 @@
               </dd>
             </div>
           </dl>
-
           <dl class="govuk-summary-list govuk-summary-list--no-border">
             <div class="govuk-summary-list__row">
               <dt class="govuk-summary-list__key">
@@ -137,7 +130,6 @@
               </dd>
             </div>
           </dl>
-
           <dl class="govuk-summary-list govuk-summary-list--no-border">
             <div class="govuk-summary-list__row">
               <dt class="govuk-summary-list__key">
@@ -172,7 +164,6 @@
               </dd>
             </div>
           </dl>
-
           <form>
             <div class="govuk-form-group">
               <label class="govuk-label" for="file-format">
@@ -182,7 +173,6 @@
                 <option value="csv" selected>CSV</option>
               </select>
             </div>
-
             <div class="govuk-button-group govuk-!-margin-bottom-0">
               <button class="govuk-button" data-module="govuk-button">
                 Download
@@ -192,17 +182,13 @@
               </button>
             </div>
           </form>
-
         </div>
-
         <div class="govuk-grid-column-full">
           <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
         </div>
-
         <div class="govuk-grid-column-full">
           <h2 class="govuk-heading-m">Related project data</h2>
         </div>
-
         <div class="govuk-grid-column-full">
           <ul class="govuk-list">
             <li>
@@ -219,11 +205,8 @@
             </li>
           </ul>
         </div>
-
       </div>
-
     </main>
-
   </div>
 
   <footer class="govuk-footer" role="contentinfo">
