--- a/v1/search/project-summary-two.html
+++ b/v1/search/project-summary-two.html
@@ -18,7 +18,7 @@
 
   <!--[if !IE 8]><!-->
   <link href="/stylesheets/govuk-frontend-4.4.0.min.css" rel="stylesheet">
-  <link href="/stylesheets/fs-custom-styles.css" rel="stylesheet">
+  <link href="/stylesheets/pfs-custom-styles.css" rel="stylesheet">
   <!--<![endif]-->
 
   <!--[if IE 8]>
@@ -53,14 +53,14 @@
   </header>
 
   <div class="govuk-width-container">
-
     <div class="govuk-breadcrumbs">
       <ol class="govuk-breadcrumbs__list">
         <li class="govuk-breadcrumbs__list-item">
           <a class="govuk-breadcrumbs__link" href="/v1/index.html">Search results</a>
         </li>
         <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/v1/search/project-two.html">Fenn's shopping centre footfall project outcomes
+          <a class="govuk-breadcrumbs__link" href="/v1/search/project-two.html">Fenn's shopping centre footfall project
+            outcomes
             2021</a>
         </li>
         <li class="govuk-breadcrumbs__list-item">
@@ -68,15 +68,10 @@
         </li>
       </ol>
     </div>
-
     <main class="govuk-main-wrapper" id="main-content" role="main">
-
       <h1 class="govuk-heading-xl">Project summary: Fenn's shopping centre footfall</h1>
-
       <div class="govuk-grid-row">
-        
         <div class="govuk-grid-column-two-thirds">
-
           <dl class="govuk-summary-list govuk-summary-list--no-border">
             <div class="govuk-summary-list__row">
               <dt class="govuk-summary-list__key">
@@ -111,10 +106,8 @@
               </dd>
             </div>
           </dl>
-
           <p class="govuk-body"><strong>Project aim: </strong>The project will use funding to regenerate the shopping
             centre, support local retailers and improve community feel.</p>
-
           <dl class="govuk-summary-list govuk-summary-list--no-border">
             <div class="govuk-summary-list__row">
               <dt class="govuk-summary-list__key">
@@ -144,7 +137,6 @@
               </dd>
             </div>
           </dl>
-
           <ul class="govuk-list">
             <li>
               <a class="govuk-link" href="#">View risk register</a>
@@ -153,7 +145,6 @@
               <a class="govuk-link" href="#">View PowerBI dashboard</a>
             </li>
           </ul>
-
           <form>
             <div class="govuk-form-group">
               <label class="govuk-label" for="file-format">
@@ -163,7 +154,6 @@
                 <option value="csv" selected>CSV</option>
               </select>
             </div>
-
             <div class="govuk-button-group govuk-!-margin-bottom-0">
               <button class="govuk-button" data-module="govuk-button">
                 Download
@@ -173,17 +163,13 @@
               </button>
             </div>
           </form>
-
         </div>
-
         <div class="govuk-grid-column-full">
           <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
         </div>
-
         <div class="govuk-grid-column-full">
           <h2 class="govuk-heading-m">Related project information</h2>
         </div>
-
         <div class="govuk-grid-column-full">
           <ul class="govuk-list">
             <li>
@@ -191,11 +177,8 @@
             </li>
           </ul>
         </div>
-
       </div>
-
     </main>
-
   </div>
 
   <footer class="govuk-footer" role="contentinfo">
